--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
             </nav>
         </div>
     </header>
+    <section class="hero">
+        <div class="container">
+            <div class="box">
+                <h1>COMIDA DE VERDADE <span>PARA SEU DOG!</span></h1>
+                <h2>Pedidos Personalizados - Prontos para Comer!</h2>
+                <a href="" class="button">Crie seu Plano</a>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
