--- a/index.html
+++ b/index.html
@@ -55,6 +55,74 @@
             </div>
         </div>
     </section>
+    <section class="seen">
+        <div class="container">
+            <div>
+                <img src="./assets/images/cbs.svg" alt="">
+            </div>
+            <div>
+                <img src="./assets/images/sharktank.svg" alt="">
+            </div>
+            <div>
+                <img src="./assets/images/forbes.svg" alt="">
+            </div>
+            <div>
+                <img src="./assets/images/fox.svg" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="topics container">
+        <div class="topic">
+            <div class="left">
+                <img src="./assets/images/t1.jpg" alt="">
+            </div>
+            <div class="right">
+                <p>Por que pais de pet escolhem DogDev?</p>
+                <ul>
+                    <li>Comem felizes</li>
+                    <li>Peso equilibrado</li>
+                    <li>Melhor 💩</li>
+                    <li>Pelo brilhante</li>
+                    <li>Menos idas ao vet</li>    
+                    <li>Mais energia</li>
+                </ul>
+                <div>
+                    <a href="" class="button">Começe Agora</a>
+                </div>
+            </div>
+        </div>
+        <div class="topic reverse">
+            <div class="left">
+                <img src="./assets/images/t2.jpg" alt="">
+            </div>
+            <div class="right">
+                <ul>
+                    <li>Receitas feitas por vets com ingredientes reais feitos na <span>cozinha dos humanos</span></li>
+                </ul>
+                <p>Nós oferecemos comida para dogs excepcionais, com base na ciência, para dar soluções nutricionais de qualidade incontestável
+                </p>
+                <div>
+                    <a href="" class="button2">Começe Agora</a>
+                </div>
+            </div>
+        </div>
+        <div class="topic">
+            <div class="left">
+                <img src="./assets/images/t3.jpg" alt="">
+            </div>
+            <div class="right">
+                <ul>
+                    <li>Personalizado</li>
+                    <li>Preparado</li>
+                    <li>Entregue</li>
+                </ul>
+                <p>Escolha as características unicas do seu dog e nós vamos formular o plano alimentar perfeito e nutritivo, entregue na sua porta</p>
+                <div>
+                    <a href="" class="button2">Começe Agora</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
