--- a/index.html
+++ b/index.html
@@ -231,6 +231,63 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <nav>
+                <p>Produtos</p>
+                <ul>
+                    <li><a href="">Frango Frito</a></li>
+                    <li><a href="">Bife do Oião</a></li>
+                    <li><a href="">Peru de Calda</a></li>
+                    <li><a href="">Lombo Fresco</a></li>
+                    <li><a href="">Porco Mega Blaster</a></li>
+                    <li><a href="">Maçã de Frango</a></li>
+                    <li><a href="">Banana Caramelizada</a></li>
+                    <li><a href="">Goma de Mascar</a></li>
+                    <li><a href="">Prato Personalizado</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <p>Sobre</p>
+                <ul>
+                    <li><a href="">Nosso Processo</a></li>
+                    <li><a href="">Como Funciona</a></li>
+                    <li><a href="">Depoimentos</a></li>
+                    <li><a href="">Carreiras</a></li>
+                    <li><a href="">Presentes</a></li>
+                    <li><a href="">Imprensas</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <p>Comunidade</p>
+                <ul>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">DogDev Club</a></li>
+                    <li><a href="">Mande para um Amigo</a></li>
+                    <li><a href="">Embaixadores</a></li>
+                    <li><a href="">Torne-se um Afiliado</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">TikTok</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <p>Suporte</p>
+                <ul>
+                    <li><a href="">contado@dogdev.com.br</a></li>
+                    <li><a href="">(11) 99999-9999</a></li>
+                    <li><a href="">Perguntas Frequentes</a></li>
+                    <li><a href="">Minha Conta</a></li>
+                    <li><a href="">Política de Privacidade</a></li>
+                    <li><a href="">Termos de Uso</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="bar">
+            DogDev - Todos os Direitos Reservados
+        </div>
+    </footer>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
